fix: community page container height breaks in safari

--- a/styles/CommunityPage.module.scss
+++ b/styles/CommunityPage.module.scss
@@ -42,7 +42,6 @@
   align-items: center;
   justify-items: center;
 
-  height: 100%;
   width: min(100%, 1280px);
 }
 
